nginx-deploy.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
   creationTimestamp: null
   labels:
     app: nginx
   name: nginx

spec:
  replicas: 2 # tells deployment to run 1 pods matching the template
  selector:
   matchLabels:
     app: nginx
  strategy: {}
  template: # create pods using pod definition in this template
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        resources: {}
status: {}
